--- a/Clinic/.classpath
+++ b/Clinic/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="E:/Java/prBanking/src/Jars/javax.activation-1.2.0.jar"/>
 	<classpathentry kind="lib" path="E:/Java/prBanking/src/Jars/javax.mail.jar"/>
 	<classpathentry kind="lib" path="E:/Java/prBanking/src/Jars/postgresql-42.2.18.jar"/>
+	<classpathentry kind="lib" path="E:/Java Jars/Spire.Doc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
